--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.0.0",
     "@mapbox/mapbox-sdk": "^0.16.1",
     "cloudinary": "^1.30.0",
     "connect-flash": "^0.1.1",
@@ -33,7 +34,8 @@
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^8.0.0"
+    "passport-local-mongoose": "^8.0.0",
+    "react-rating-stars-component": "^2.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
